[package]
name = "lf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
binread = "2.2.0"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "3.2.20", features = ["derive"] }
crc32fast = "1.3.2"
flate2 = "1.0.24"
integer-encoding = "3.0.4"
num-derive = "0.3.3"
num-traits = "0.2.15"
serde = { version = "1.0.144", features = ["serde_derive"] }
serde_json = "1.0.85"
snap = "1.0.5"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
